--- a/photonMonitor.html
+++ b/photonMonitor.html
@@ -1,6 +1,19 @@
 <!DOCTYPE HTML>
 <html>
  <!--If you need jQuery, here it is...<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>-->
+<head>
+		<style>
+			button.RoundButton {
+				width: 100px;
+				height: 100px;
+				text-align: center;
+				padding: 6px 0;
+				font-size: 12px;
+				line-height: 5;
+				border-radius: 100px;
+			}
+		</style>
+</head>
 <body>
 	<p>From <a href="https://community.particle.io/t/tutorial-spark-variable-and-function-on-one-web-page/4181">https://community.particle.io/t/tutorial-spark-variable-and-function-on-one-web-page/4181</a><br> and <a href="https://community.particle.io/t/tutorial-getting-started-with-spark-publish/3422">https://community.particle.io/t/tutorial-getting-started-with-spark-publish/3422</a><BR>with mods by James to make simpler, one-way (from photon), and to respond to James' and Bart's devices.</p>
 	<p>Last button pressed on James' device: <span id = "JamesButtonPressed"></span><p>
@@ -9,21 +22,25 @@
 	<p><Button id="flashGreen" onClick="doSomething('green');">Do Something Green</Button></p>
 	<p><Button id="flashBlue" onClick="doSomething('blue');">Do Something Blue</Button></p>
 	<p><Button id="flashUndefined" onClick="doSomething('bluergh');">Do Something Else</Button></p>
+	<p>
+		<Button id="voteJames" onClick="voteJames();" class=RoundButton style="background-color: red">James</Button>
+		<Button id="voteBart" onClick="voteBart();"  class=RoundButton style="background-color: green">Bart</Button>
+	</p>
 	<script src="./tokens.js"></script>
     <script type="text/javascript">
-	
-	var xhttp = new XMLHttpRequest();  
+
+	var xhttp = new XMLHttpRequest();
 	var JamesEventSource = new EventSource("https://api.spark.io/v1/devices/" + JamesDeviceID + "/events/?access_token=" + JamesAccessToken);
 	var BartEventSource = new EventSource("https://api.spark.io/v1/devices/" + BartDeviceID + "/events/?access_token=" + BartAccessToken);
-	  
+
 	  JamesEventSource.addEventListener('buttonPressed', function(eventData) {
   		  document.getElementById("JamesButtonPressed").innerHTML += (JSON.parse(eventData.data)).data + " ";
 	  });
-	  
+
 	  JamesEventSource.addEventListener('logMe', function(eventData) {
 		  console.log((JSON.parse(eventData.data)).data);
 	  });
-			  
+
 	  BartEventSource.addEventListener('buttonPressed-orWhateverBartIsPublishing', function(eventData) {
 		  //console.log(eventData);
 		  //console.log( JSON.parse(eventData.data) );
@@ -32,7 +49,7 @@
 	              var pressedCounter = document.getElementById("BartButtonPressed");
 	     			  pressedCounter.innerHTML = parsedData.data ;
 	          });
-			  
+
 	  function doSomething(colour) {
 		xhttp.open("POST", "https://api.spark.io/v1/devices/" +JamesDeviceID + "/" + "respond/?access_token=" + JamesAccessToken, true);
 		xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
@@ -40,6 +57,17 @@
 	    // simpler, but needs jQuery . May get round CORS problems
 		//var requestURL2 = "https://api.spark.io/v1/devices/" +JamesDeviceID + "/" + "respond" + "/";
 		//$.post( requestURL2, {params:colour, access_token: JamesAccessToken });
+		}
+		function voteJames() {
+			sendVote(JamesDeviceID, JamesAccessToken);
+		}
+		function voteBart() {
+			sendVote(BartDeviceID, BartAccessToken);
+		}
+		function sendVote( device, token) {
+			xhttp.open("POST", "https://api.spark.io/v1/devices/" + device + "/" + "vote/?access_token=" + token, true);
+			xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+			xhttp.send();
 		}
     </script>
 </body>
